--- a/package.json
+++ b/package.json
@@ -31,5 +31,7 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "bun@1.3.6"
 }
+
